crates/forge_provider/src/open_router/snapshots/forge_provider__open_router__request__tests__tool_message_typescript_code.snap
---
source: crates/forge_provider/src/open_router/request.rs
expression: router_message
snapshot_kind: text
---
{
  "role": "tool",
  "content": "<tool_result>\n<tool_name>rust_tool</tool_name>\n<success>\n<code>fn main<T>(gt: T) {let b = &gt; }</code>\n</success>\n</tool_result>",
  "name": "rust_tool",
  "tool_call_id": "456"
}
